--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# Configuração do H2 em memória
+#H2
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -8,10 +8,9 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # Console do H2 para debug (http://localhost:8080/h2-console)
 spring.h2.console.enabled=true
 
-# Hibernate ddl-auto: create-drop para que o schema seja criado na inicialização e destruído ao final
 spring.jpa.hibernate.ddl-auto=create-drop
 
-# Configuração do SpringDoc OpenAPI
+#SpringDoc OpenAPI
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/v3/api-docs
 springdoc.packages-to-scan=com.awards.controller
@@ -19,7 +18,6 @@ springdoc.swagger-ui.display-request-duration=true
 springdoc.swagger-ui.operations-sorter=method
 springdoc.swagger-ui.tags-sorter=alpha
 
-# Informações da API que aparecerão no topo da página do Swagger
 springdoc.api-docs.info.title=Awards API
-springdoc.api-docs.info.description=API para consulta de indicados e vencedores do prêmio Framboesa de Ouro.
+springdoc.api-docs.info.description=API para consulta de indicados e vencedores da categoria Pior Filme.
 springdoc.api-docs.info.version=v1.0.0
